--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,14 @@
     <h2> Deploy Test </h2>
     <button id="btn"> Click to change the color </button>
     <script src="./index.js"></script>
+    <script type="text/javascript">
+        window._mfq = window._mfq || [];
+        (function() {
+          var mf = document.createElement("script");
+          mf.type = "text/javascript"; mf.defer = true;
+          mf.src = "//cdn.mouseflow.com/projects/230f2361-1c10-4667-b5b5-676ced86a260.js";
+          document.getElementsByTagName("head")[0].appendChild(mf);
+        })();
+      </script>    
 </body>
 </html>
